# DEMOapp-automation

./: Locators.py  README.md  helper_methods.py  pyproject.toml
appium_day_1/: element_selector.txt
appium_day_2/: controll_adv_ui.py
appium_day_3/: actions_waits_management.py
appium_day_4/: gestures_checkboxes_keyboard.py  zoom_gallery.py
midterm_project/: data.py  err_messages.py  keys.py  test_cases.md
midterm_project/pages/: address_page.py  api_calls_page.py  base_page.py  cart_page.py  catalog_page.py  checkout_page.py  drawing_page.py  finger_print_page.py  geo_location_page.py  item_page.py  log_in_page.py  review_page.py  webview_page.py
midterm_project/steps/: api_calls_steps.py  base_steps.py  drawing_steps.py  end_2_end_steps.py  geo_location_steps.py  login_steps.py  reset_app_steps.py  webview_steps.py
tests/: conftest.py  test_appium_day_2.py  test_appium_day_3.py  test_appium_day_4.py  test_gallery_app.py
tests/test_midterm_project/: conftest.py  test_midterm_project.py
